--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,15 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
+
 
 .App-header {
   background-color: #222;
-  height: 90px;
+  height: 97px;
   padding: 15px;
   color: white;
   margin-top: 6px;
+  opacity: 0.6;
 }
 .App-header img{
   margin-left: 110px;
@@ -63,7 +61,6 @@
 .hallclass{
   background-color: white;
   height: 600px;
-  padding: 80px;
   }
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
@@ -72,9 +69,10 @@
 p.outset {border-style: outset;}
 .menumargin{
 position: absolute; 
-  top: 40px; 
-  left: 80; 
+  top: 5px; 
+ margin-left:-50px;
   width: 100%;
+  margin-left: -750px;
 }
 h2 span { 
    color: white;
@@ -88,6 +86,7 @@ h2 span {
 h2 span a{
   margin-right:20px;
 }
+
 .contacts
 {
   width:80%;
@@ -108,4 +107,41 @@ h2 span a
 h2 span a:hover
 {
   color: white;
+}
+.foot
+{
+  background-color: #0C1123;
+      height: 280px;
+      padding: 80px;
+      padding-top: 25px;
+     
+}
+.firstsec
+{
+  color: white;
+  align-content: center;
+
+}
+.firstimg
+{
+  background-image: url("./images/venue6.jpg");
+  height: 470px;
+}
+.logclass{
+    
+ 
+  padding-top: -20px;
+}
+.menuclass
+{
+  position: absolute; 
+  top: 31px;
+  width: 100%;
+  margin-left: 750px;
+  
+}
+.book
+{
+  margin-top: 93px;
+  padding-left: 245px;
 }
