--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@
 
 .venueclass{
   background-color: black;
-  height: 700px;
+  height: 850px;
   padding: 80px;
   color: white;
   font-size: 13px;
@@ -57,6 +57,11 @@
   
     background: wheat;
     
+  }
+  .hallspace
+  {
+    background-color: white;
+    height: 60px;
   }
 .hallclass{
   background-color: white;
@@ -93,7 +98,7 @@ h2 span a{
 }
 h2 span button
 {
-  background-color: #cc0000;
+  background-color: #DD2F4E;
   color:white;
   margin-right: 17px;
   border: black;
@@ -157,17 +162,23 @@ h2 span a:hover
 
 .footcss{
   background-color: #0C1123;
-  height: 220px;
-  color: white;
+  height: 200px;
+  color:#646878;
   padding: 20px;
   font-size:10px;
   padding-top: 12px;
 
 
  }
- 
+ .footcss h6{
+   color:white;
+ }
+
  .footerfirstsection{
 margin-left:60px;
+
+ }.footerfirstsection a{
+ color:#A23438;
  }
  .secondsection
  {
@@ -234,3 +245,28 @@ input {
 .searchField::placeholder { 
   color: white;
 }
+.copy
+{
+  background-color: #0C1123;
+  color:#979899;
+}
+hr{
+ background-color:#DA0000;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #ccc;
+  margin: 1em 0;
+  padding: 0; 
+  width:800px;
+  align-content: center
+}
+.highlightsclass{
+ 
+  color: red;
+  }
+  .redborder{
+ 
+    border-top: 2px solid red;
+    
+    width:300px;
+  }
